--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -116,7 +116,8 @@ header h1 a:hover {
 }
 
 footer {
-  margin: 1rem 0 1rem 0;
+  color: #ccc;
+  margin: 2rem 0 1rem 0;
   font-size: 0.9rem;
   text-align: center;
 }
