--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,6 @@
 
 html, body {
   font-family: 'Open Sans', sans-serif;
-  padding: 0;
-  margin: 0;
 }
 
 button {
@@ -103,11 +101,6 @@ header {
   margin-bottom: 2rem;
 }
 
-h1 {
-  margin-bottom: 0;
-  font-weight: normal;
-}
-
 header h1 a {
   color: #555;
 }
@@ -129,6 +122,7 @@ footer {
 #input-select-zone {
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 
 #format-select-container {
